--- a/app/views/machines/index.html.erb
+++ b/app/views/machines/index.html.erb
@@ -1,9 +1,9 @@
-<h1>Articles</h1>
+<h1>Machines</h1>
 
 <ul>
   <% @machines.each do |item| %>
     <li>
-      <%= item.NAME %>
+    <%= link_to item.NAME, item %>
     </li>
   <% end %>
 </ul>
