--- a/app/views/machines/index.html.erb
+++ b/app/views/machines/index.html.erb
@@ -1,5 +1,13 @@
 <h1>Machines</h1>
 
+<%= form_with url: "/", method: :get do |form| %>
+  <%= form.label :filter, "Filter by:" %>
+  <%= select_tag(:filter, options_for_select([['zip code', 'zip'], ['name', 'name'], ['address', 'address']])) %>
+  <%= form.text_field :query %>
+  <%= form.submit "Filter" %>
+<% end %>
+
+
  <table>
   <tr>
     <th>Zip code</th>
