--- a/app/views/machines/index.html.erb
+++ b/app/views/machines/index.html.erb
@@ -1,13 +1,17 @@
 <h1>Machines</h1>
 
-<%= form_with url: "/", method: :get do |form| %>
+<%= form_with url: "/machines", method: :get do |form| %>
   <%= form.label :filter, "Filter by:" %>
-  <%= select_tag(:filter, options_for_select([['zip code', 'zip'], ['name', 'name'], ['address', 'address']])) %>
+  <%= select_tag(:filter, options_for_select([['zip code', 'zip'], ['name', 'name'], ['address', 'address']], :selected => params[:filter])) %>
   <%= form.text_field :query %>
   <%= form.submit "Filter" %>
+  <button type='button' onclick="location.href='/'">Reset</button>
 <% end %>
 
-
+<%= link_to 'Export', 
+    machines_path(request.parameters.merge({format: :xls})), 
+    download: 'pastomatai.xls' %>
+  
  <table>
   <tr>
     <th>Zip code</th>
@@ -18,21 +22,7 @@
     <tr>
     <td class='text-center'><a href='/machines/<%=item.id%>'><%= item.ZIP %></a></td>
     <td><a href='/machines/<%=item.id%>'><%= item.NAME %></a></td>
-
-    <%if item.A8_NAME != ""%>
-      <% adress = [item.A5_NAME, item.A7_NAME + "-" + item.A8_NAME, item.A2_NAME, item.A1_NAME]%>
-    <%else%>
-      <% adress = [item.A5_NAME, item.A7_NAME, item.A2_NAME, item.A1_NAME]%>
-    <%end%>
-    <% addr_string = " "%>
-    <% adress.each do |piece| %>
-      <% if piece != ""%>
-        <% addr_string += piece + ", "%>
-      <% end %>
-    <% end %>
-    <% addr_string += item.A0_NAME%>
-
-    <td><a href='/machines/<%=item.id%>'><%= addr_string %></a></td>
+    <td><a href='/machines/<%=item.id%>'><%= item.FULL_ADDRESS %></a></td>
 
     </tr>
   <% end %>
