--- a/app/assets/stylesheets/machines.scss
+++ b/app/assets/stylesheets/machines.scss
@@ -1,37 +1,75 @@
 // Place all the styles related to the Machines controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+body{
+  font-family: sans-serif;
+  margin: 0;
+}
+h1{
+  margin-top: 3rem;
+  margin-left: 2rem;
+}
 td a {
   display: inline-block; 
   width: 100%;
 }
-td, th, tr, table{
-  border-collapse: collapse;
-}
-th, td {
-  border-right: 1px solid black;
 
-}
 table{
+  border-collapse: collapse;
   margin: auto;
   margin-top: 0.5rem;
-  width: 90%;
-}
-.info-table {
-  width: auto;
-  margin: auto;
   margin-bottom: 2rem;
+  width: 90%;
+  font-size: 0.9em;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
-tr{
-  border: 1px solid black;
+table thead th {
+  background-color: #00984c;
+  color: #ffffff;
+  text-align: center;
+  padding: 0.5rem;
 }
-tr:hover td a{
-  text-decoration: none;
-  background-color: rgb(223, 255, 196);
+
+table tbody tr {
+  border-bottom: thin solid #dddddd;
 }
+
+table tbody tr:nth-of-type(even) {
+  background-color: #f3f3f3;
+}
+
+table tbody tr:last-of-type {
+  border-bottom: 1px solid #00984c;
+}
+
+table tbody tr:hover td a{
+  font-weight: 500;
+  color: #00984c;
+}
+
 td a{
   text-decoration: none;
   color: rgb(80, 80, 80);
+}
+form {
+  position: relative;
+  text-align: center;
+}
+nav{
+  position: fixed;
+  top: 0;
+  right: 4rem;
+  padding: 0.5rem 7rem 0.5rem 0.5rem;
+  border-radius: 0 0 5px 5px;
+  background-color: rgba(156, 156, 156, 0.938);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+#info-table{
+  width: auto;
+  min-width: 40%;
+}
+#info-table tbody tr td{
+  padding: 1px 1rem;
 }
 .text-center{
   text-align: center;
@@ -39,25 +77,27 @@ td a{
 .text-indent{
   text-indent: 5px;
 }
-form {
-  margin: auto;
-  text-align: center;
-  margin-bottom: 0.5rem;
-}
-.export-link{
-  display: inline-block;
+.link{
   text-align: center;
   text-decoration: none;
-  margin-left: 10rem;
-  background-color: #34d449;
   color: white;
-  font-family: 'Courier New', Courier, monospace;
   border-radius: 5px;
-  padding: 0.7rem 1rem;
+  box-shadow: 2px -2px 10px rgba(0, 0, 0, 0.29);
+  z-index: 1;
+  position: absolute;
+  right: 1rem;
 }
 .export-link:hover, .export-link:active {
-  background-color: #52d364;
+  background-color: #1faf67;
 }
-div {
-  text-align: left;
+.export-link{
+  background-color: #00984c;
+  padding: 10px;
+}
+.back-link:hover, .back-link:active {
+  background-color: #1f68a3;
+}
+.back-link{
+  background-color: #005498;
+  padding: 10px 16px;
 }
