--- a/app/views/machines/index.html.erb
+++ b/app/views/machines/index.html.erb
@@ -1,26 +1,13 @@
 <h1>Paštomatai</h1>
 
-<%= form_with url: "/machines", method: :get do |form| %>
-  <%= form.label :filter, "Filter by:" %>
-  <%= select_tag(:filter, options_for_select([['zip code', 'zip'], ['name', 'name'], ['address', 'address']], :selected => params[:filter])) %>
-  <%= form.text_field :query %>
-  <%= form.submit "Filter" %>
-  <button type='button' onclick="location.href='/'">Reset</button>
-<% end %>
-
-<div>
-  <%= link_to 'Export', 
-    machines_path(format: "csv", :filter => params[:filter], :query => params[:query]), 
-    download: 'pastomatai.csv', 
-    class: 'export-link' %>
-</div>
-
  <table>
-  <tr>
-    <th>Zip code</th>
-    <th>Name</th>
-    <th>Adress</th>
-  </tr>
+  <thead>
+    <tr>
+      <th>Zip code</th>
+      <th>Name</th>
+      <th>Adress</th>
+    </tr>
+  </thead>
 
   <% @machines.each do |item| %>
     <tr>
