--- a/app/views/machines/erb_show.erb
+++ b/app/views/machines/erb_show.erb
@@ -1,4 +1,4 @@
-<h1><%= @machine.NAME %></h1>
+<h1><%= @machine.name %></h1>
 
 <table id='info-table'>
 
@@ -10,7 +10,7 @@
 </thead>
 
 <% @machine.attributes.each do |attr_name, attr_value| %>
-  <%if attr_name != "FULL_ADDRESS"%>
+  <%if attr_name != "full_address"%>
 
     <tr>
     <td class='text-indent'><%= attr_name %></td>
